src/test/deca/syntax/invalid/provided/InvalidLValue.deca
// DESCRIPTION : Lvalue invalide
// RESULTAT: left-hand side of assignment is not an lvalue
{
    3 = a;
}
